# hd-wallet-wasm

./: .gitignore  CMakeLists.txt  LICENSE  PKI.md  README.md  SECURITY.md  TASKS.md  package.json
.github/workflows/: build.yml  docs.yml  npm-publish.yml
.husky/: pre-commit
cmake/: wasi-sdk.cmake
docs/: index.html
docs/api/: index.html
docs/assets/: blockchain-trust-4eNSQKF4.js  blockchain-trust-5BNTSLnM.js  blockchain-trust-B5wO1VC8.js  blockchain-trust-B6GjMSMa.js  blockchain-trust-B_c0HLIg.js  blockchain-trust-BfuHwBlO.js  blockchain-trust-Bpm_qXDf.js  blockchain-trust-Bs_Cj1Ka.js  blockchain-trust-BwRs7pD8.js  blockchain-trust-CMxphm1h.js  blockchain-trust-CjFWS8st.js  blockchain-trust-CpFiLaCF.js  blockchain-trust-DFfOO_Ph.js  blockchain-trust-DLcPnSo9.js  blockchain-trust-DV4aY7mZ.js  blockchain-trust-DbTBROwi.js  blockchain-trust-DpwGJjIQ.js  blockchain-trust-DvFiyVYC.js  blockchain-trust-RB7DZZBI.js  blockchain-trust-__eM4ZQc.js  blockchain-trust-uPDd_XNU.js  hd-wallet-0DWRZ2AB.js  hd-wallet-BJtLhWfN.js  hd-wallet-C6sjousA.js  hd-wallet-CYsvFaJ2.js  hd-wallet-Cc-EEsyM.js  hd-wallet-Ceu4pDGh.js  hd-wallet-CiHnnwAU.js  hd-wallet-Cq-dJIE7.js  hd-wallet-DHlkmmdr.js  hd-wallet-DVBByASW.js  hd-wallet-DgEY7XEL.js  hd-wallet-DjG2D1Fp.js  hd-wallet-VfWUwl4l.js  main-4j3JZMdQ.js  main-BAKxu6rX.js  main-BAtMN7RE.js  main-BGCujx-f.js  main-BI41lfFx.js  main-BaDp7bBJ.js  (+66 more)
docs/assets/css/: styles.css
docs/assets/js/: app.mjs
docs/examples/derivation/: index.html
docs/examples/mnemonic/: index.html
docs/examples/wallet/: index.html
docs/examples/wallet/assets/: main-BQ1GhU1N.css  main-DW5Mwp8U.js
docs/learn/: how-it-works.html
include/hd_wallet/: aligned_api.h  bip32.h  bip39.h  config.h  crypto_backend.h  crypto_openssl.h  ecdh.h  ecdsa.h  ecies.h  eddsa.h  error.h  exception_compat.h  hash.h  hd_wallet.h  key_manager.h  keyring.h  libp2p.h  secure_memory.h  slip44.h  types.h  utils.h  wasi_bridge.h
include/hd_wallet/coins/: bitcoin.h  coin.h  cosmos.h  ethereum.h  polkadot.h  solana.h
include/hd_wallet/hw/: hw_transport.h  hw_wallet.h  keepkey.h  ledger.h  trezor.h
include/hd_wallet/tx/: bitcoin_tx.h  ethereum_tx.h  transaction.h
openssl-fips/: README.md  build.sh
schemas/: hd_wallet_aligned.fbs
scripts/: build-wasi.sh  ci-local.sh  generate-aligned.mjs
src/: aligned_api.cpp  bip32.cpp  bip39.cpp  bip39_wordlist.inc  bip44.cpp  crypto_openssl.c  curves.cpp  ecdh.cpp  ecdsa.cpp  ecies.cpp  eddsa.cpp  error.cpp  hash.cpp  key_manager.cpp  keyring.cpp  libp2p.cpp  secure_memory.cpp  utils.cpp  wasi_bridge.cpp  wasm_bindings.cpp  wasm_exports.cpp
src/coins/: bitcoin.cpp  coin.cpp  cosmos.cpp  ethereum.cpp  polkadot.cpp  solana.cpp
src/hw/: hw_transport.cpp  hw_wallet.cpp  keepkey.cpp  ledger.cpp  trezor.cpp
src/tx/: bitcoin_tx.cpp  ethereum_tx.cpp  transaction.cpp
test/: test_bip32.cpp  test_bip39.cpp  test_bitcoin.cpp  test_coin_addresses.cpp  test_curves.cpp  test_ecies.cpp  test_ethereum.cpp  test_framework.h  test_main.cpp  test_vectors.cpp
test/dart/: README.md  pubspec.yaml
test/dart/.dart_tool/: package_config.json
test/dart/test/: hd_wallet_test.dart
test/go/: README.md  go.mod  hd_wallet_test.go
test/python/: README.md  requirements.txt  test_hd_wallet.py
test/rust/: Cargo.toml  README.md
test/rust/src/: lib.rs
wallet-ui/: README.md  index.html  package.json  standalone.html  vite.config.js  widget.html
wallet-ui/scripts/: build-widget-css.mjs
wallet-ui/src/: address-derivation.js  app.js  blockchain-trust.js  constants.js  lib.js  pki-org.js  pki-storage.js  pki-ui.js  pki-x509.js  sds-bridge.js  template.js  trust-engine.js  trust-rules.js  trust-ui.js  wallet-storage.js  wallet-template.html  wallet-widget.js
wallet-ui/styles/: main.css  widget.css
wallet-ui/test/: address-derivation.test.js  constants.test.js  hash-normalization.test.js  on-login-callback.test.js  wallet-storage.test.js
wasi/: CMakeLists.txt  crypto.c  crypto.h  wasi_main.cpp
wasi/test/: test_wasi.mjs
wasm/: README.md  hd-wallet-wasm-1.2.0.tgz  package.json
wasm/src/: aligned.d.ts  aligned.mjs  epm-attestation.mjs  index.d.ts  index.mjs  webcrypto.mjs
wasm/test/: test_aligned.mjs  test_aligned_surface.mjs  test_all.mjs  test_api_surface.mjs  test_bip32.mjs  test_bip39.mjs  test_browser.html  test_bundle_browser_artifact.mjs  test_crypto.mjs  test_extended_features.mjs  test_isomorphic.mjs  test_libp2p.mjs  test_low_edge_cases.mjs  test_transactions.mjs  test_vectors.mjs
